# qastra

./: .gitignore  AI_FEATURES.md  AI_ROADMAP.md  CONTRIBUTING.md  INSTALLATION.md  LICENSE  QUICK_START.md  README.md  ROADMAP.md  cli.py  intelligent_test_demo.py  orange_hrm_test.py  pyproject.toml  qastra_history.json  requirements.txt  runner.py  setup.py  smart_demo_test.py  test_debug_demo.py  test_demo.py  test_page_ai.html  test_page_ai_demo.py  test_recorded.py  test_recorder_functionality.py
.qastra_cache/: locator_fixes.json  locators.json  maintenance_results.json
.qastra_cache/backups/: test_demo.py.backup_20260315_190654
.qastra_reports/: email_report.txt  junit.xml  report.html  report.json  simple_report.html
.qastra_visual/diff/: example_homepage_report.json  orangehrm_login_report.json
docs/: README.md
examples/: README.md  ai_test_demo.py  beginner_friendly_test.py  complete_demo.py  comprehensive_e2e_test.py  demo_test.py  ecommerce_test.py  form_validation.py  login.qa  login_flow_intent.py  login_test.py  multi_page_test.py  parallel_demo.py  real_world_demo.py  real_world_test.py  recorder_demo.py  showcase_test.py  simple_login_test.py  test_login.qa  ultimate_showcase.py
generated_tests/: ai_assist_report.json  example.com_Example_Domain.py  example.com_Example_Domain_metadata.json  example_com_Example_Domain.py  example_com_Example_Domain_metadata.json  nlp_test_report.json  opensource-demo.orangehrmlive.com_OrangeHRM.py  opensource-demo.orangehrmlive.com_OrangeHRM_metadata.json  orangehrm_login_test.py  orangehrm_login_test_fixed.py  orangehrm_login_test_fixed_metadata.json  orangehrm_login_test_metadata.json  test_plan_examplecom_20260315_185904.json  test_plan_examplecom_20260315_185904.txt  test_plan_opensource-demoorangehrmlivecom_20260315_185937.json  test_plan_opensource-demoorangehrmlivecom_20260315_185937.txt  test_plan_opensource-demoorangehrmlivecom_20260325_095329.json
qastra/: __init__.py  runner.py
qastra/ai/: ai_generator.py  locator_store.py  similarity.py  (+1 more)
reports/: report.html
test_project/: README.md
tests/: __init__.py  api_test.py  error_test.py  failing_test.py  login_test.py  simple_test.py  test_parallel_1.py  test_parallel_2.py  test_parallel_3.py
utils/: dom_parser.py
vibetest/: __init__.py
(+65 files in other folders)
