[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "qastra"
version = "0.1.0"
description = "AI-first browser automation framework for Python"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "AbhishekPurohit1", email = "abhishekpurohit444@gmail.com"}
]
maintainers = [
    {name = "AbhishekPurohit1", email = "abhishekpurohit444@gmail.com"}
]
keywords = ["automation", "testing", "ai", "browser", "playwright"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Testing",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Internet :: WWW/HTTP :: Browsers",
]
requires-python = ">=3.8"
dependencies = [
    "playwright>=1.40.0",
    "click>=8.0.0",
    "beautifulsoup4>=4.12.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=22.0.0",
    "flake8>=5.0.0",
    "mypy>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/AbhishekPurohit1/qastra"
Documentation = "https://github.com/AbhishekPurohit1/qastra#readme"
Repository = "https://github.com/AbhishekPurohit1/qastra.git"
"Bug Tracker" = "https://github.com/AbhishekPurohit1/qastra/issues"

[project.scripts]
qastra = "qastra.cli.cli:cli"

[tool.setuptools]
packages = ["qastra"]

[tool.setuptools.package-data]
qastra = ["*.json", "*.yaml", "*.yml"]

[tool.black]
line-length = 100
target-version = ['py38']

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
